# egui-dashboard

./: .gitignore  Cargo.toml  README.MD  config.xml  config.xsd  config.yaml  config_windows.xml  test.slint
src/: file_change.rs  main.rs  measurements.rs  protocol  pubsub_widget.rs  redis_bridge.rs  style.js  sub_table.rs  win_gauge.rs  win_main.rs  win_menu.rs  win_progress.rs  win_status.rs  zenoh_pubsub.rs
src/config/: file_change.rs  file_xml.rs  mod.rs  save.rs
src/logger/: mod.rs
src/pubsub/: mock_pubsub.rs  mod.rs  mqtt_bridge.rs  mqtt_pubsub.rs  payload_cbor.rs  payload_json.rs  redis_bridge.rs  zenoh_pubsub.rs
src/store/: mod.rs  sub_table.rs  sub_timeseries.rs  timeserie.rs  timeseries.rs
src/widget/: button.rs  gauge.rs  label.rs  mod.rs  plot.rs  progress.rs  slider.rs  status.rs  table.rs  tag.rs
src/widgets/: broker_alive.rs  button.rs  dial.rs  gauge.rs  gauge_h.rs  gauge_r.rs  label.rs  mod.rs  plot.rs  progress.rs  progress_h.rs  progress_v.rs  slider.rs  space.rs  status.rs  switch.rs  table.rs  tag.rs  temp.rs
src/widgets-old/: mod.rs  progress_v.rs
src/windows/: mod.rs  pubsub_window.rs  theme.rs  win_gauge.rs  win_main.rs  win_menu.rs  win_progress.rs  win_status.rs  win_text.rs  win_topics.rs
