[package]
name = "egui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe = "0.25.0"
egui = { version="0.25.0",features=["callstack"]}
egui_gauge = "0.1.3"
log = "0.4.14" # for logging
simplelog = "0.12.1" # for logging
env_logger = "0.11.0"
# redis = { git = "https://github.com/redis-rs/redis-rs", branch = "resp3",features = ["tokio-comp"] }
redis = { version="0.24.0" ,features=[]} 
chrono = "0.4.19" # for time
mqtt-async-client = "0.3.1" # for mqtt
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
regex = "*"
serde = { version="1.0",features = ["derive"]} 
serde_yaml = "0.9.21" # for a yaml description
serde-xml-rs = { version="0.6.0" }
minidom="*"