[package]
name = "egui-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windows"
path = "src/win_main.rs"

[[bin]]
name = "widget"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe =  { version="0.28.1" }
egui = { version="0.28.1",features=["callstack"]}
egui_extras={ version="0.28.1",features=[]}
egui_plot = { version="0.28.1",features=[]} 
egui-modal = { version="*",features=[]} 
log = "0.4.14" # for logging
simplelog = "*" # for logging
env_logger = "0.11.0"
# redis = { git = "https://github.com/redis-rs/redis-rs", branch = "resp3",features = ["tokio-comp"] }
# redis = { version="0.24.0" ,features=[]} 
fred = { version="9.0.3",features=["full-tracing"]}
chrono = "0.4.19" # for time
mqtt-async-client = "0.3.1" # for mqtt
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*", features = ["full"] }
tokio-util = { version ="0.7",default_features=false,features = ["codec"] }
regex = "*"
serde = { version="1.0",features = ["derive"]} 
serde_yaml = "0.9.21" # for a yaml description
serde-xml-rs = { version="0.6.0" }
minidom="*"
zenoh = { version="*" }
minicbor = { version = "0.24.2", features=["derive","alloc","half"] }
notify = "6.1.1"
rand="*"